# broadband

./: .gitattributes  .gitignore  SEO_IMPLEMENTATION_SUMMARY.md  SEO_MONTHLY_MAINTENANCE.md  SEO_OPTIMIZATION_GUIDE.md  SEO_QUICK_REFERENCE.md  deny.toml  index.html  package-lock.json  package.json  tailwind.config.js  verify-seo.sh  vite.config.js  vite.config.ts
backend/: .clippy.toml  .env.example  .gitignore  Cargo.toml  Dockerfile  deny.toml  docker-compose.yml
backend/.cargo/: config.toml
backend/.github/workflows/: ci.yml  security-audit.yml
backend/migrations/: 001_initial_schema.sql  002_billing_tickets_leads.sql  003_devices_bandwidth_network.sql  004_accounting_payment_gateway.sql  005_history_tables.sql  006_phase2_customer_profiles_speed_profiles.sql  007_phase3_enhancements.sql  007_referral_wallets.sql  008_phase4_module_enhancements.sql  009_phase5_remaining_modules.sql  010_phase6_inventory_payment_gateway.sql  011_dunning_state_column.sql  012_row_level_security.sql  013_update_permissions_table.sql  20240101000001_initial_schema.sql  20260713000001_add_gst_fields.sql  20260714000001_add_new_modules.sql
backend/migrations/sql/: 001_create_extensions.sql  002_create_branches.sql  003_create_rbac.sql  004_create_customers.sql  005_create_plans.sql  006_create_subscriptions.sql  007_create_billing.sql  008_create_accounting.sql  009_create_devices.sql  010_create_network.sql  011_create_tickets.sql  012_create_notifications.sql  013_create_audit.sql  014_create_events.sql  015_create_documents.sql  016_seed_roles_permissions.sql  017_seed_initial_plans.sql  018_create_schemas.sql  019_move_tables_to_schemas.sql
backend/scripts/: security-audit.ps1  security-audit.sh
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
backend/src/api/: mod.rs  openapi.rs
backend/src/api/admin/: middleware.rs  router.rs
backend/src/api/customer/: middleware.rs  router.rs
backend/src/common/: branch_helpers.rs  db.rs  mod.rs
backend/src/common/cache/: cached_repository.rs  mod.rs  redis.rs
backend/src/common/config/: config.rs
backend/src/common/database/: connection.rs  migrations.rs  mod.rs  transaction.rs
backend/src/common/errors/: app_error.rs
backend/src/common/events/: nats.rs  subjects.rs
backend/src/common/jobs/: data_cleanup.rs  invoice_dunning.rs  mod.rs  notification_dedup.rs  partition_manager.rs  rls_bypass.rs  sla_checker.rs  subscription_renewal_reminder.rs  wallet_expiry_cleanup.rs
backend/src/common/middleware/: audit_middleware.rs  auth_middleware.rs  (+8 more)
backend/src/config/: database.rs  mod.rs  nats.rs  redis.rs  settings.rs
backend/src/db/: connection.rs  migrations.rs  mod.rs
backend/src/docs/: accounting.rs  admin.rs  audit.rs  auth.rs  bandwidth.rs  billing.rs  branches.rs  compliance.rs  coverage.rs  customers.rs  devices.rs  discovery.rs  documents.rs  gateway.rs  installations.rs  inventory.rs  leads.rs  mod.rs  monitoring.rs  network.rs  notifications.rs  payments.rs  plans.rs  referrals.rs  scheduler.rs  security.rs  subscriptions.rs  tickets.rs  workflow.rs
backend/src/infrastructure/: cache.rs  database.rs  messaging.rs  metrics.rs  metrics_handler.rs  mod.rs  observability.rs  openapi.rs  storage.rs
backend/src/interfaces/: mod.rs
backend/src/middleware/: audit.rs  auth.rs  branch_scope.rs  cors.rs  mod.rs  rate_limit.rs  rbac.rs
backend/src/migration/: m001_create_extensions.rs  m002_create_branches.rs  m003_create_rbac.rs  m004_create_customers.rs  m005_create_plans.rs  m006_create_subscriptions.rs  m007_create_billing.rs  m008_create_accounting.rs  m009_create_devices.rs  m010_create_network.rs  m011_create_tickets.rs  m012_create_notifications.rs  m013_create_audit.rs  m014_create_events.rs  m015_create_documents.rs  m016_seed_roles_permissions.rs  m017_seed_initial_plans.rs  m018_add_2fa_backup_codes.rs  mod.rs
backend/src/modules/: mod.rs
backend/src/routes/: mod.rs
backend/src/services/: mod.rs  nats.rs  redis_client.rs
backend/src/shared/: app_state.rs  crypto.rs  errors.rs  id.rs  mod.rs  primitives.rs  types.rs  validators.rs
backend/src/tests/: mod.rs
backend/src/utils/: mod.rs
backend/src/workers/: bandwidth_worker.rs  billing_worker.rs  device_sync_worker.rs  mod.rs  monitoring_worker.rs  notification_worker.rs  outbox_worker.rs  partition_worker.rs  scheduler_worker.rs
backend/tests/common/: mod.rs
backend/tests/e2e/: billing_workflow_test.rs  customer_lifecycle_test.rs  device_workflow_test.rs  network_workflow_test.rs  payment_gateway_test.rs  subscription_workflow_test.rs  ticket_workflow_test.rs
backend/tests/integration/: accounting_repository_test.rs  audit_repository_test.rs  billing_repository_test.rs  customer_repository_test.rs  device_repository_test.rs  identity_repository_test.rs  network_repository_test.rs  security_abuse_tests.rs  security_jwt_tests.rs  security_repository_test.rs  subscription_repository_test.rs  ticket_repository_test.rs
(+1614 files in other folders)
